--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.google.firebase:firebase-database:11.8.0'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.google.maps:google-maps-services:0.2.6'
+    implementation 'org.slf4j:slf4j-nop:1.7.25'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
     implementation 'com.github.arimorty:floatingsearchview:2.1.1'
